# twt-sim

./: .anjuta_sym_db.db  .gkmake_conf  Makefile.in  README.md  buffer_mt_to_test  configure  configure.ac
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.h  config.status
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  twt_sim
Debug/src/.deps/: main.Po
src/: Makefile.am  Makefile.in  main.cc  main.cc~  twt_define.h  twt_functions.cc  twt_gkmake.h
src/.deps/: main.Tpo
