## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = twt_sim

twt_sim_SOURCES = \
	main.cc \
	twt_gkmake.h \
	twt_define.h \
	twt_functions.cc

twt_sim_LDFLAGS = 

twt_sim_LDADD =  \
	-lgim


